crustrace-core/tests/snapshots/patterns__const_function_with_where_clause.snap
---
source: crustrace-core/tests/patterns.rs
expression: apply_trace_all(input)
---
const fn hello<T>(value: T) -> T
where
    T: Copy + Default,
{
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "hello", value = value);
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        value
    }
}
