crustrace-core/tests/snapshots/patterns__pub_unsafe_function_with_generics.snap
---
source: crustrace-core/tests/patterns.rs
expression: apply_trace_all(input)
---
pub unsafe fn hello<T: Clone + Send>(value: T) -> T {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "hello");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        value.clone()
    }
}
